test/pass/internal/simple_if_return_fold.lily
# If every branch of an 'if' returns a value, and there is an else, then an
# explicit return is not necessary at the very end.
define f(a: Integer) : Integer {
    if a == 1:
        return 1
    else:
        return 1
}
